<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".09">

        <ImageView
        android:layout_gravity="center_horizontal"
        android:src ="@drawable/spiderposter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Capturar Fotografia"
            android:layout_weight="1"/>
        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Seleccionar imagen"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Título de la película"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Director"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Year"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enlace a IMDB"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Annotations"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"    >
        <Button
            android:id="@+id/cancelButton"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Cancel"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/Save" />
    </LinearLayout>
</LinearLayout>

    <!--   <TextView
           android:id="@+id/editingFIlm"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="68dp"
           android:layout_marginTop="100dp"
           android:text="@string/EditingFilm"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <Button
           android:id="@+id/saveButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="48dp"
           android:layout_marginTop="272dp"
           android:layout_marginEnd="8dp"
           android:text="@string/Save"
           app:layout_constraintEnd_toStartOf="@+id/cancelButton"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/editingFIlm" />

       <Button
           android:id="@+id/cancelButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="392dp"
           android:layout_marginEnd="32dp"
           android:text="@string/Cancel"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/saveButton"
           app:layout_constraintTop_toTopOf="parent" /> -->
